[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PharmaPy"
version = "0.0.2"
authors = [
  { name="Ronoy Sarkar", email="ronoysarkar.mail@gmail.com" },
]
description = "A package utilizing Named-Entity Recognition (NER) model to identify prescription drugs present in a provided text sample"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "transformers",
    "torch",
]

[project.urls]